best-practices-k8s/restrict-node-proxy/resources.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: system:bootstrap-signer
rules:
- apiGroups:
  - ""
  resources:
  - nodes/proxy
  verbs:
  - get

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: system:node-bootstrapper
rules:
- apiGroups:
  - ""
  resources:
  - nodes/proxy
  verbs:
  - get

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: system:kubelet-bootstrap
rules:
- apiGroups:
  - ""
  resources:
  - nodes/*
  verbs:
  - '*'

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: custom-dangerous-nodes-proxy-get
rules:
- apiGroups:
  - ""
  resources:
  - nodes/proxy
  verbs:
  - get

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: custom-dangerous-nodes-wildcard-get
rules:
- apiGroups:
  - ""
  resources:
  - nodes/*
  verbs:
  - get

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: custom-dangerous-all-resources-get
rules:
- apiGroups:
  - ""
  resources:
  - '*'
  verbs:
  - get

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: custom-safe-nodes-metrics
rules:
- apiGroups:
  - ""
  resources:
  - nodes/metrics
  verbs:
  - get

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: custom-safe-pods-only
rules:
- apiGroups:
  - ""
  resources:
  - pods
  verbs:
  - get
  - list
  - watch

---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: custom-dangerous-role-nodes-proxy
  namespace: default
rules:
- apiGroups:
  - ""
  resources:
  - nodes/proxy
  verbs:
  - get

---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: custom-safe-role-configmaps
  namespace: default
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  verbs:
  - get
  - list
